<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:id="@+id/activity_mainLinearLayout"
		android:focusable="true"
		android:focusableInTouchMode="true"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:paddingBottom="80dp"
		android:orientation="vertical">

		<LinearLayout
			android:visibility="visible"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="horizontal"
			android:gravity="right"
			android:padding="5dp">

			<TextView
				android:id="@+id/activity_mainAutorText"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="Slipk Projects"
				android:textStyle="bold"
				android:textColor="#00BAFF"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="vertical"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:padding="10dp"
			android:background="@drawable/background_rounded"
			android:layout_marginRight="5dp"
			android:layout_marginLeft="5dp">



			<LinearLayout
				android:id="@+id/activity_mainInputPasswordLayout"
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:orientation="vertical"
				android:gravity="center"
				android:paddingTop="10dp"
				android:paddingLeft="20dp"
				android:paddingRight="20dp"
				android:paddingBottom="5dp"
				android:layout_gravity="center">


				<LinearLayout
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					android:orientation="horizontal"
					android:gravity="center"
					android:layout_marginBottom="10dp"
					android:paddingBottom="10dp">

					<TextView
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:text="@string/title_login_main"
						android:textStyle="bold"
						android:textSize="18sp"
						android:textColor="@color/colorText"/>

				</LinearLayout>

				<LinearLayout
					android:layout_gravity="center_vertical"
					android:background="@color/white"
					android:layout_height="45dp"
					android:layout_width="fill_parent"
					>

					<LinearLayout
						android:gravity="center"
						android:layout_height="fill_parent"
						android:layout_margin="5dp"
						android:layout_width="40dp">

						<ImageView
							android:layout_width="24dip"
							android:layout_height="24dip"
							android:tint="@color/black_light"
							android:src="@drawable/ic_description_white_24dp"/>

					</LinearLayout>

					<RelativeLayout
						android:layout_height="fill_parent"
						android:layout_width="fill_parent">

						<Spinner
							android:id="@+id/serverSpin"
							android:layout_width="fill_parent"
							android:layout_height="fill_parent"/>

						<ImageView
							android:layout_height="fill_parent"
							android:layout_width="50dp"
							android:src="@drawable/drop"
							android:layout_alignParentRight="true"/>

					</RelativeLayout>

				</LinearLayout>


				<android.support.design.widget.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="center">

					<android.support.design.widget.TextInputEditText
						android:id="@+id/activity_mainInputPasswordUserEdit"
						android:layout_height="wrap_content"
						android:layout_width="match_parent"
						android:ems="20"
						android:singleLine="true"
						android:drawableStart="@drawable/ic_person_black_24dp"
						android:textColor="@color/colorText"
						android:hint="@string/auth_username"/>

				</android.support.design.widget.TextInputLayout>

				<RelativeLayout
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					android:layout_marginTop="4dp"
					android:layout_marginLeft="4dp"
					android:layout_marginRight="4dp"
					android:layout_marginBottom="4dp"
					android:orientation="horizontal">

					<android.support.design.widget.TextInputLayout
						android:id="@+id/fragment_userpassTextInputLayout"
						android:layout_width="match_parent"
						android:layout_height="wrap_content">

						<android.support.design.widget.TextInputEditText
							android:id="@+id/activity_mainInputPasswordPassEdit"
							android:inputType="textPassword"
							android:textColor="@color/colorText"
							android:drawableStart="@drawable/ic_lock_black_24dp"
							android:ems="20"
							android:singleLine="true"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:hint="@string/password"/>

					</android.support.design.widget.TextInputLayout>

					<LinearLayout
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:orientation="vertical"
						android:layout_alignEnd="@id/fragment_userpassTextInputLayout">

						<ImageButton
							android:id="@+id/activity_mainInputShowPassImageButton"
							android:src="@drawable/ic_visibility_off_black_24dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:hint="@string/show_password"
							android:layout_gravity="right"/>

					</LinearLayout>

				</RelativeLayout>

			</LinearLayout>

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:orientation="horizontal">

				<Button
					android:id="@+id/activity_starterButtonMain"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="20dp"
					android:layout_marginRight="20dp"
					android:background="@drawable/button_blue"
					android:textColor="#FFFFFF"
					android:textStyle="bold"
					android:text="@string/start"
					android:layout_gravity="center"/>

			</LinearLayout>

		</LinearLayout>

	</LinearLayout>

</ScrollView>

